# mathdefs

./: Cargo.toml
src/: definitions.rs  lib.rs
src/traits/: evaluatable.rs  mod.rs
