[package]
name = "mathdefs"
version = "0.1.0"
edition = "2021"
description = "Definitions of some math operations and related traits (with implementations)"
license = "MIT"
homepage = "https://github.com/megahomyak/mathdefs"
repository = "https://github.com/megahomyak/mathdefs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
